--- a/src/index.html
+++ b/src/index.html
@@ -8,12 +8,12 @@
 
   <link rel="shortcut icon" href="favicon.ico">
 
-  <link rel="stylesheet" href="demo.scss">
-  <link rel="stylesheet" href="main.scss">
+  <link rel="stylesheet" href="demos/demo.scss">
+  <link rel="stylesheet" href="demos/index.scss">
 
   <link rel="stylesheet" href="bem-flex-grid.scss">
 
-  <script src="demo.ts"></script>
+  <script src="demos/demo.ts"></script>
 </head>
 <body>
   <h1>Bem Flex Grid</h1>
@@ -34,10 +34,9 @@
     <a href="demos/basic/8.html"></a>
     <a href="demos/basic/9.html"></a>
     <a href="demos/basic/10.html"></a>
-
-    <a href="demos/content/1.html"></a>
-    <a href="demos/content/2.html"></a>
-    <a href="demos/content/3.html"></a>
+    <a href="demos/basic/11.html"></a>
+    <a href="demos/basic/12.html"></a>
+    <a href="demos/basic/13.html"></a>
   </div>
 
   <script>Demo.showcase();</script>
