--- a/src/demos/basic/7.html
+++ b/src/demos/basic/7.html
@@ -9,10 +9,10 @@
   <link rel="stylesheet" href="../../../node_modules/prismjs/themes/prism.css">
 
   <link rel="shortcut icon" href="../../favicon.ico">
-  <link rel="stylesheet" href="../../demo.scss">
+  <link rel="stylesheet" href="../demo.scss">
   <link rel="stylesheet" href="../../bem-flex-grid.scss">
 
-  <script src="../../demo.ts"></script>
+  <script src="../demo.ts"></script>
 </head>
 <body>
   <div class="demo-source__description">
