Add minimal demo

--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,8 @@
   </header>
 
   <div id="demo-showcase">
+    <a href="demos/basic/1.1.html"></a>
+    <a href="demos/basic/1.1.html"></a>
     <a href="demos/basic/1.html"></a>
     <a href="demos/basic/2.html"></a>
     <a href="demos/basic/3.html"></a>
