Rename into .bfg--overflow ; change demo file names

--- a/src/demos/basic/2.html
+++ b/src/demos/basic/2.html
@@ -16,14 +16,11 @@
 </head>
 <body>
   <div class="demo-source__description">
-    When NOT using <code>.bfg--wrap</code>, the <code>.bfg__box</code> boxes are displayed on one line.<br>
-    In this case, the boxes can NOT leave outside the <code>.bfg--col</code> container.
+    The minimal markup required with <code>.bfg--col</code> direction.
   </div>
 
   <div class="bfg bfg--col">
-    <div class="bfg__box bfg__box--3"></div>
-    <div class="bfg__box bfg__box--3"></div>
-    <div class="bfg__box bfg__box--6"></div>
+    <div class="bfg__box"></div>
   </div>
 
   <script>Demo.viewCode(); Demo.fillGrid();</script>
