--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>Demo - Bem Flex Grid</title>
+  <title>Showcase - Bem Flex Grid</title>
 
   <link rel="shortcut icon" href="favicon.ico">
 
@@ -24,8 +24,6 @@
   </header>
 
   <div id="demo-showcase">
-    <a href="demos/basic/1.1.html"></a>
-    <a href="demos/basic/1.1.html"></a>
     <a href="demos/basic/1.html"></a>
     <a href="demos/basic/2.html"></a>
     <a href="demos/basic/3.html"></a>
@@ -39,6 +37,8 @@
     <a href="demos/basic/11.html"></a>
     <a href="demos/basic/12.html"></a>
     <a href="demos/basic/13.html"></a>
+    <a href="demos/basic/14.html"></a>
+    <a href="demos/basic/15.html"></a>
   </div>
 
   <script>Demo.showcase();</script>
