--- a/src/demos/basic/11.html
+++ b/src/demos/basic/11.html
@@ -16,32 +16,17 @@
 </head>
 <body>
   <div class="demo-source__description">
-    There are 12 sizes available to make the grid layout, from <code>.bfg__box--1</code> to <code>.bfg__box--12</code>.<br>
-    Use the css class <code>.bfg__content.bfg__content--fill</code> to fill the boxes content.
+    To fix the width of a particular box in pixels, use <code>.bfg__box--fixed</code> and give the box the expected <code>width</code>.<br>
+    In this case, one of the other boxes should fill the remaining space by having <code>.bfg__box</code> without any size (like <code>.bfg__box--6</code>).<br>
+    To see it in action, open on a separate tab and resize the window.
   </div>
 
-  <div class="bfg bfg--row bfg--gap bfg--wrap">
-    <div class="bfg__box bfg__box--12"><div class="bfg__content bfg__content--fill"></div></div>
-
-    <div class="bfg__box bfg__box--11"><div class="bfg__content bfg__content--fill"></div></div>
-    <div class="bfg__box bfg__box--1"><div class="bfg__content bfg__content--fill"></div></div>
-
-    <div class="bfg__box bfg__box--10"><div class="bfg__content bfg__content--fill"></div></div>
-    <div class="bfg__box bfg__box--2"><div class="bfg__content bfg__content--fill"></div></div>
-
-    <div class="bfg__box bfg__box--9"><div class="bfg__content bfg__content--fill"></div></div>
-    <div class="bfg__box bfg__box--3"><div class="bfg__content bfg__content--fill"></div></div>
-
-    <div class="bfg__box bfg__box--8"><div class="bfg__content bfg__content--fill"></div></div>
-    <div class="bfg__box bfg__box--4"><div class="bfg__content bfg__content--fill"></div></div>
-
-    <div class="bfg__box bfg__box--7"><div class="bfg__content bfg__content--fill"></div></div>
-    <div class="bfg__box bfg__box--5"><div class="bfg__content bfg__content--fill"></div></div>
-
-    <div class="bfg__box bfg__box--6"><div class="bfg__content bfg__content--fill"></div></div>
-    <div class="bfg__box bfg__box--6"><div class="bfg__content bfg__content--fill"></div></div>
+  <div class="bfg bfg--row">
+    <div class="bfg__box bfg__box--fixed" style="width:150px"></div>
+    <div class="bfg__box bfg__box--4"></div>
+    <div class="bfg__box"></div>
   </div>
 
-  <script>Demo.viewCode();</script>
+  <script>Demo.viewCode(); Demo.fillGrid();</script>
 </body>
 </html>
