--- a/src/demos/basic/14.html
+++ b/src/demos/basic/14.html
@@ -20,7 +20,7 @@
     Use the css class <code>.bfg__content.bfg__content--fill</code> to fill the boxes content.
   </div>
 
-  <div class="bfg bfg--row bfg--gap bfg--wrap">
+  <div class="bfg bfg--col bfg--gap bfg--wrap">
     <div class="bfg__box bfg__box--12"><div class="bfg__content bfg__content--fill"></div></div>
 
     <div class="bfg__box bfg__box--11"><div class="bfg__content bfg__content--fill"></div></div>
