--- a/src/demos/basic/8.html
+++ b/src/demos/basic/8.html
@@ -16,19 +16,15 @@
 </head>
 <body>
   <div class="demo-source__description">
-    To always fit the inherited width, use a <code>.bfg--row</code> wrapper and use a separate <code>.bfg--col</code> for each col.<br>
-    This is more complex, but you can adjust the height of each row.
+    When using <code>.bfg--wrap</code> and <code>.bfg__box</code> are displayed on multiple lines.<br>
+    If you know the exact number of lines (2 for example), you can still fit the inherited height using <code>.bfg--lines-2</code>.
+    In this case, all the columns have the same width.
   </div>
 
-  <div class="bfg bfg--row">
-    <div class="bfg__box bfg__box--4 bfg bfg--col">
-      <div class="bfg__box bfg__box--6"></div>
-      <div class="bfg__box bfg__box--6"></div>
-    </div>
-
-    <div class="bfg__box bfg__box--8 bfg bfg--col">
-      <div class="bfg__box bfg__box--12"></div>
-    </div>
+  <div class="bfg bfg--col bfg--wrap bfg--lines-2">
+    <div class="bfg__box bfg__box--6"></div>
+    <div class="bfg__box bfg__box--6"></div>
+    <div class="bfg__box bfg__box--12"></div>
   </div>
 
   <script>Demo.viewCode(); Demo.fillGrid();</script>
