--- a/src/demos/basic/9.html
+++ b/src/demos/basic/9.html
@@ -16,21 +16,18 @@
 </head>
 <body>
   <div class="demo-source__description">
-    To fix the width of a particular box in pixels, use <code>.bfg__box--fixed</code> and give the box the expected <code>width</code>.<br>
-    In this case, one of the other boxes should fill the remaining space by having <code>.bfg__box</code> without any size (like <code>.bfg__box--6</code>).
+    To always fit the inherited height, use a <code>.bfg--col</code> wrapper and use a separate <code>.bfg--row</code> for each row.<br>
+    This is more complex, but this time you can set a different height of each row.
   </div>
 
-  <div class="bfg bfg--row bfg--gap">
-    <div class="bfg__box bfg__box--fixed" style="width:150px">
-      <div class="bfg__content bfg__content--fill"></div>
+  <div class="bfg bfg--col">
+    <div class="bfg__box bfg__box--3 bfg bfg--row">
+      <div class="bfg__box bfg__box--6"></div>
+      <div class="bfg__box bfg__box--6"></div>
     </div>
 
-    <div class="bfg__box bfg__box--4">
-      <div class="bfg__content bfg__content--fill"></div>
-    </div>
-
-    <div class="bfg__box">
-      <div class="bfg__content bfg__content--fill"></div>
+    <div class="bfg__box bfg__box--9 bfg bfg--row">
+      <div class="bfg__box bfg__box--8 bfg__box--12"></div>
     </div>
   </div>
 
