Make it work on IE11 (in progress...)

--- a/src/index.html
+++ b/src/index.html
@@ -24,21 +24,21 @@
   </header>
 
   <div id="demo-showcase">
-    <a href="demos/basic/1.html"></a>
-    <a href="demos/basic/2.html"></a>
-    <a href="demos/basic/3.html"></a>
-    <a href="demos/basic/4.html"></a>
-    <a href="demos/basic/5.html"></a>
-    <a href="demos/basic/6.html"></a>
-    <a href="demos/basic/7.html"></a>
-    <a href="demos/basic/8.html"></a>
-    <a href="demos/basic/9.html"></a>
-    <a href="demos/basic/10.html"></a>
-    <a href="demos/basic/11.html"></a>
-    <a href="demos/basic/12.html"></a>
-    <a href="demos/basic/13.html"></a>
-    <a href="demos/basic/14.html"></a>
-    <a href="demos/basic/15.html"></a>
+    <a href="demos/showcase/1.html"></a>
+    <a href="demos/showcase/2.html"></a>
+    <a href="demos/showcase/3.html"></a>
+    <a href="demos/showcase/4.html"></a>
+    <a href="demos/showcase/5.html"></a>
+    <a href="demos/showcase/6.html"></a>
+    <a href="demos/showcase/7.html"></a>
+    <a href="demos/showcase/8.html"></a>
+    <a href="demos/showcase/9.html"></a>
+    <a href="demos/showcase/10.html"></a>
+    <a href="demos/showcase/11.html"></a>
+    <a href="demos/showcase/12.html"></a>
+    <a href="demos/showcase/13.html"></a>
+    <a href="demos/showcase/14.html"></a>
+    <a href="demos/showcase/15.html"></a>
   </div>
 
   <script>Demo.showcase();</script>
