--- a/src/demos/showcase/11.html
+++ b/src/demos/showcase/11.html
@@ -33,6 +33,6 @@
     <div class="bfg__box"></div>
   </div>
 
-  <script>Demo.viewCode(); Demo.fillGrid();</script>
+  <script>Demo.viewCode(); Demo.fillGrid(); Demo.pageHeight();</script>
 </body>
 </html>
