--- a/src/demos/showcase/3.html
+++ b/src/demos/showcase/3.html
@@ -25,6 +25,6 @@
     <div class="bfg__box bfg__box--6"></div>
   </div>
 
-  <script>Demo.viewCode(); Demo.fillGrid();</script>
+  <script>Demo.viewCode(); Demo.fillGrid(); Demo.pageHeight();</script>
 </body>
 </html>
