--- a/src/demos/showcase/10.html
+++ b/src/demos/showcase/10.html
@@ -16,8 +16,8 @@
 </head>
 <body>
   <div class="demo-source__description">
-    To always fit the inherited width, use a <code>.bfg--row</code> wrapper and use a separate <code>.bfg--col</code> for each column.<br>
-    This is more complex, but this time you can set a different width of each column.
+    To always fit the main <code>.bfg</code> width, use a <code>.bfg--row</code> wrapper and a separate <code>.bfg--col</code> for each column.<br>
+    This is more complex, but this way you can set a different width of each column.
   </div>
 
   <div class="bfg bfg--row">
@@ -31,6 +31,6 @@
     </div>
   </div>
 
-  <script>Demo.viewCode(); Demo.fillGrid();</script>
+  <script>Demo.viewCode(); Demo.fillGrid(); Demo.pageHeight();</script>
 </body>
 </html>
