--- a/src/demos/showcase/13.html
+++ b/src/demos/showcase/13.html
@@ -17,7 +17,8 @@
 <body>
   <div class="demo-source__description">
     There are 12 sizes available to make the grid layout, from <code>.bfg__box--1</code> to <code>.bfg__box--12</code>.<br>
-    Use the css class <code>.bfg__content.bfg__content--fill</code> to fill the boxes content.
+    <br>
+    In this demo we also add a new <code>div</code> with <code>.bfg__content.bfg__content--fill</code> to fill the boxes content.
   </div>
 
   <div class="bfg bfg--row bfg--gap bfg--wrap">
@@ -42,6 +43,6 @@
     <div class="bfg__box bfg__box--6"><div class="bfg__content bfg__content--fill"></div></div>
   </div>
 
-  <script>Demo.viewCode();</script>
+  <script>Demo.viewCode(); Demo.pageHeight();</script>
 </body>
 </html>
