--- a/src/demos/showcase/15.html
+++ b/src/demos/showcase/15.html
@@ -48,6 +48,6 @@
     </div>
   </div>
 
-  <script>Demo.viewCode(); Demo.fillGrid();</script>
+  <script>Demo.viewCode(); Demo.fillGrid(); Demo.pageHeight();</script>
 </body>
 </html>
