--- a/src/demos/showcase/2.html
+++ b/src/demos/showcase/2.html
@@ -23,6 +23,6 @@
     <div class="bfg__box"></div>
   </div>
 
-  <script>Demo.viewCode(); Demo.fillGrid();</script>
+  <script>Demo.viewCode(); Demo.fillGrid(); Demo.pageHeight();</script>
 </body>
 </html>
