--- a/src/demos/showcase/5.html
+++ b/src/demos/showcase/5.html
@@ -26,6 +26,6 @@
     <div class="bfg__box bfg__box--12"></div>
   </div>
 
-  <script>Demo.viewCode(); Demo.fillGrid();</script>
+  <script>Demo.viewCode(); Demo.fillGrid(); Demo.pageHeight();</script>
 </body>
 </html>
