--- a/src/demos/showcase/6.html
+++ b/src/demos/showcase/6.html
@@ -18,6 +18,11 @@
   <div class="demo-source__description">
     When using <code>.bfg--wrap</code>, <code>.bfg__box</code> can be displayed on multiple lines.<br>
     In this case, the boxes may extend beyond the <code>.bfg--col</code> container, causing a global horizontal scrollbar to appear.
+
+    <span class="demo-source__warning">
+      <strong>Note for Chrome:</strong><br>
+      You have to explicitly set the <code>width</code> of the <code>.bfg__box</code>, otherwise content like text will increase indefinitely in width.
+    </span>
   </div>
 
   <div class="bfg bfg--col bfg--wrap">
@@ -26,6 +31,6 @@
     <div class="bfg__box bfg__box--12"></div>
   </div>
 
-  <script>Demo.viewCode(); Demo.fillGrid();</script>
+  <script>Demo.viewCode(); Demo.fillGrid(); Demo.pageHeight();</script>
 </body>
 </html>
