--- a/src/introduction.html
+++ b/src/introduction.html
@@ -47,8 +47,8 @@
   ...
 &lt;/div&gt;
 </code></pre>
-<h2><code>.bfg</code> modifiers</h2>
-<h3><code>.bfg--row</code> and <code>.bfg--col</code></h3>
+<h2>.bfg modifiers</h2>
+<h3>.bfg--row and .bfg--col</h3>
 <p>To define the direction the <code>.bfg__box</code> are placed in the <code>.bfg</code> container, you must use <code>.bfg--row</code> or <code>.bfg--col</code>.</p>
 <pre><code class="language-html">&lt;div class=&quot;bfg bfg--row&quot;&gt;...&lt;/div&gt;
 </code></pre>
@@ -60,11 +60,11 @@
 <blockquote>
 <p>When using <code>.bfg--col</code>, the grid system will works only if the <code>.bfg</code> height (or its parent height) is defined.</p>
 </blockquote>
-<h3><code>.bfg--wrap</code></h3>
+<h3>.bfg--wrap</h3>
 <p>To allow the <code>.bfg__box</code> to wrap as needed onto multiple lines, use the optional <code>.bfg--wrap</code>.</p>
 <pre><code class="language-html">&lt;div class=&quot;bfg bfg--wrap&quot;&gt;...&lt;/div&gt;
 </code></pre>
-<h3><code>.bfg--lines-2</code>, <code>.bfg--lines-3</code>, <code>.bfg--lines-4</code></h3>
+<h3>.bfg--lines-[N]</h3>
 <p>If using <code>.bfg.bfg--row.bfg--wrap</code> then the <code>.bfg__box</code> are placed in the row direction and wrapped onto multiple lines when needed.</p>
 <p>In this case the total height of all <code>.bfg__box</code> might be bigger than the <code>.bfg</code> container height itself.</p>
 <p>If you know that there's exactly 2 lines of <code>.bfg__box</code>, you can constrain them to fit into the <code>.bfg</code> container, by using <code>.bfg--lines-2</code>.</p>
@@ -82,11 +82,17 @@
 </code></pre>
 <pre><code class="language-html">&lt;div class=&quot;bfg bfg--col bfg--wrap bfg--lines-4&quot;&gt;...&lt;/div&gt;
 </code></pre>
-<h3><code>.bfg--gap</code></h3>
+<h3>.bfg--gap</h3>
 <p>To add a gap between <code>.bfg__box</code>, use <code>.bfg--gap</code>.</p>
 <pre><code class="language-html">&lt;div class=&quot;bfg bfg--gap&quot;&gt;...&lt;/div&gt;
 </code></pre>
-<h3><code>.bfg--disabled</code></h3>
+<h3>.bfg--overflow</h3>
+<p>By default, <code>.bfg__box</code> and <code>.bfg__content</code> are using <code>overflow: auto;</code>.</p>
+<p>Use <code>.bfg--overflow</code> to use <code>overflow: visible;</code> instead for all boxes.</p>
+<p>(in the same way, use <code>.bfg__box--overflow</code> to apply this behavior to a specific box).</p>
+<pre><code class="language-html">&lt;div class=&quot;bfg bfg--overflow&quot;&gt;...&lt;/div&gt;
+</code></pre>
+<h3>.bfg--disabled</h3>
 <p>To disable the grid system use <code>.bfg--disabled</code>.</p>
 <p>As the grid is responsive, you can disable the grid system at each breakpoint.</p>
 <p>(see below for more details about responsive grid).</p>
@@ -100,14 +106,8 @@
 
 &lt;div class=&quot;bfg bfg--xs-disabled&quot;&gt;...&lt;/div&gt;
 </code></pre>
-<h3><code>.bfg--overflow</code></h3>
-<p>By default, <code>.bfg__box</code> and <code>.bfg__content</code> are using <code>overflow: auto;</code>.</p>
-<p>Use <code>.bfg--overflow</code> to use <code>overflow: visible;</code> instead for all boxes.</p>
-<p>(in the same way, use <code>.bfg__box--overflow</code> to apply this behavior to a specific box).</p>
-<pre><code class="language-html">&lt;div class=&quot;bfg bfg--overflow&quot;&gt;...&lt;/div&gt;
-</code></pre>
-<h2><code>.bfg__box</code> modifiers</h2>
-<h3><code>.bfg__box--[size]</code></h3>
+<h2>.bfg__box modifiers</h2>
+<h3>.bfg__box--[size]</h3>
 <p>Define the <code>.bfg__box</code> size using <code>.bfg__box--1</code>,  <code>.bfg__box--2</code>, ...,  <code>.bfg__box--11</code>,  <code>.bfg__box--12</code>.</p>
 <pre><code class="language-html">...
   &lt;div class=&quot;bfg__box bfg__box--1&quot;&gt;&lt;/div&gt;
@@ -117,7 +117,7 @@
   &lt;div class=&quot;bfg__box bfg__box--12&quot;&gt;&lt;/div&gt;
 ...
 </code></pre>
-<h3><code>.bfg__box--fixed</code></h3>
+<h3>.bfg__box--fixed</h3>
 <p>Use <code>.bfg__box--fixed</code> to indicate that a <code>.bfg__box</code> should not grow or shrink.</p>
 <p>Here's an example when using <code>.bfg--row</code>:</p>
 <pre><code class="language-html">&lt;div class=&quot;bfg bfg--row&quot;&gt;
@@ -159,7 +159,7 @@
   &lt;/div&gt;
 ...
 </code></pre>
-<h2><code>.bfg__header</code> and <code>.bfg__content</code> modifiers</h2>
+<h2>.bfg__header and .bfg__content modifiers</h2>
 <p>Use <code>.bfg__content.bfg__content--fill</code> to fill the box content.</p>
 <p>Use optional <code>.bfg__header.bfg__header--fill</code> to add an header to the box content.</p>
 <pre><code class="language-html">...
@@ -167,7 +167,7 @@
   &lt;div class=&quot;bfg__content bfg__content--fill&quot;&gt;&lt;/div&gt;
 ...
 </code></pre>
-<h2>Nesting <code>.bfg</code> Advanced use case</h2>
+<h2>Nesting .bfg Advanced use case</h2>
 <p>To nest grids, use <code>.bfg</code> <em>block</em> on the <code>.bfg__box</code> <em>element</em>.</p>
 <p><strong>Example:</strong></p>
 <p>See below the <code>&lt;div&gt;</code> which have 2 behaviors:</p>
