--- a/src/introduction.html
+++ b/src/introduction.html
@@ -167,7 +167,7 @@
   &lt;div class=&quot;bfg__content bfg__content--fill&quot;&gt;&lt;/div&gt;
 ...
 </code></pre>
-<h2>Nesting .bfg Advanced use case</h2>
+<h2>Nested .bfg</h2>
 <p>To nest grids, use <code>.bfg</code> <em>block</em> on the <code>.bfg__box</code> <em>element</em>.</p>
 <p><strong>Example:</strong></p>
 <p>See below the <code>&lt;div&gt;</code> which have 2 behaviors:</p>
