Change bfg__content--fill bg color into white

--- a/src/index.html
+++ b/src/index.html
@@ -41,6 +41,10 @@
     <a href="demos/showcase/15.html"></a>
   </div>
 
+  <footer>
+    <p><a href="https://github.com/avine/bem-flex-grid/">GitHub</a></p>
+  </footer>
+
   <script>Demo.showcase();</script>
 </body>
 </html>
