--- a/src/introduction.html
+++ b/src/introduction.html
@@ -167,6 +167,11 @@
   &lt;div class=&quot;bfg__content bfg__content--fill&quot;&gt;&lt;/div&gt;
 ...
 </code></pre>
+<p>Use <code>.bfg__content--nopad</code> to remove the box content padding.</p>
+<pre><code class="language-html">...
+  &lt;div class=&quot;bfg__content bfg__content--nopad&quot;&gt;&lt;/div&gt;
+...
+</code></pre>
 <h2>Nested .bfg</h2>
 <p>To nest grids, use <code>.bfg</code> <em>block</em> on the <code>.bfg__box</code> <em>element</em>.</p>
 <p><strong>Example:</strong></p>
