--- a/src/introduction.html
+++ b/src/introduction.html
@@ -30,7 +30,7 @@
   ...
 &lt;/div&gt;
 </code></pre>
-<p>You can fill the boxes using the optional <code>.bfg__content</code>.</p>
+<p>You can fill the boxes using the optional element <code>.bfg__content</code>.</p>
 <pre><code class="language-html">&lt;div class=&quot;bfg&quot;&gt;
   &lt;div class=&quot;bfg__box&quot;&gt;
     &lt;div class=&quot;bfg__content&quot;&gt;&lt;/div&gt;
@@ -38,7 +38,7 @@
   ...
 &lt;/div&gt;
 </code></pre>
-<p>You can add an header to the filled boxes using the optional <code>.bfg__header</code>.</p>
+<p>You can add an header to the filled boxes using the optional element <code>.bfg__header</code>.</p>
 <pre><code class="language-html">&lt;div class=&quot;bfg&quot;&gt;
   &lt;div class=&quot;bfg__box&quot;&gt;
     &lt;div class=&quot;bfg__header&quot;&gt;&lt;/div&gt;
@@ -49,26 +49,27 @@
 </code></pre>
 <h2>.bfg modifiers</h2>
 <h3>.bfg--row and .bfg--col</h3>
-<p>To define the direction the <code>.bfg__box</code> are placed in the <code>.bfg</code> container, you must use <code>.bfg--row</code> or <code>.bfg--col</code>.</p>
+<p>It is required to define the direction the <code>.bfg__box</code> are placed in the <code>.bfg</code> container, using <code>.bfg--row</code> or <code>.bfg--col</code>.</p>
 <pre><code class="language-html">&lt;div class=&quot;bfg bfg--row&quot;&gt;...&lt;/div&gt;
 </code></pre>
 <blockquote>
-<p>When using <code>.bfg--row</code>, the grid system will works only if the <code>.bfg</code> width (or its parent width) is defined.</p>
+<p>When using <code>.bfg--row</code>, the grid needs the <code>.bfg</code> width (or its parent width) to be defined.</p>
 </blockquote>
 <pre><code class="language-html">&lt;div class=&quot;bfg bfg--col&quot;&gt;...&lt;/div&gt;
 </code></pre>
 <blockquote>
-<p>When using <code>.bfg--col</code>, the grid system will works only if the <code>.bfg</code> height (or its parent height) is defined.</p>
+<p>When using <code>.bfg--col</code>, the grid needs the <code>.bfg</code> height (or its parent height) to be defined.</p>
 </blockquote>
 <h3>.bfg--wrap</h3>
 <p>To allow the <code>.bfg__box</code> to wrap as needed onto multiple lines, use the optional <code>.bfg--wrap</code>.</p>
 <pre><code class="language-html">&lt;div class=&quot;bfg bfg--wrap&quot;&gt;...&lt;/div&gt;
 </code></pre>
 <h3>.bfg--lines-[N]</h3>
-<p>If using <code>.bfg.bfg--row.bfg--wrap</code> then the <code>.bfg__box</code> are placed in the row direction and wrapped onto multiple lines when needed.</p>
+<p><strong>[N]</strong> (Number):<code>2</code>, <code>3</code> or <code>4</code>.</p>
+<p>As said above, if using <code>.bfg.bfg--row.bfg--wrap</code> then the <code>.bfg__box</code> are placed in the row direction and wrapped onto multiple lines when needed.</p>
 <p>In this case the total height of all <code>.bfg__box</code> might be bigger than the <code>.bfg</code> container height itself.</p>
 <p>If you know that there's exactly 2 lines of <code>.bfg__box</code>, you can constrain them to fit into the <code>.bfg</code> container, by using <code>.bfg--lines-2</code>.</p>
-<p>(in the same way, use <code>.bfg--lines-3</code> or <code>.bfg--lines-4</code> to fit exactly 3 or 4 lines respectively).</p>
+<p>In the same way, use <code>.bfg--lines-3</code> or <code>.bfg--lines-4</code> to fit exactly 3 or 4 lines respectively.</p>
 <pre><code class="language-html">&lt;div class=&quot;bfg bfg--row bfg--wrap bfg--lines-2&quot;&gt;...&lt;/div&gt;
 </code></pre>
 <pre><code class="language-html">&lt;div class=&quot;bfg bfg--row bfg--wrap bfg--lines-3&quot;&gt;...&lt;/div&gt;
@@ -88,11 +89,16 @@
 </code></pre>
 <h3>.bfg--overflow</h3>
 <p>By default, <code>.bfg__box</code> and <code>.bfg__content</code> are using <code>overflow: auto;</code>.</p>
-<p>Use <code>.bfg--overflow</code> to use <code>overflow: visible;</code> instead for all boxes.</p>
-<p>(in the same way, use <code>.bfg__box--overflow</code> to apply this behavior to a specific box).</p>
+<p>Use <code>.bfg--overflow</code> on the block to use <code>overflow: visible;</code> instead for all boxes.</p>
 <pre><code class="language-html">&lt;div class=&quot;bfg bfg--overflow&quot;&gt;...&lt;/div&gt;
 </code></pre>
-<h3>.bfg--disabled</h3>
+<p>In the same way, use <code>.bfg__box--overflow</code> on the element to apply this behavior to a specific box.</p>
+<pre><code class="language-html">...
+  &lt;div class=&quot;bfg__box bfg_box--overflow&quot;&gt;...&lt;/div&gt;
+...
+</code></pre>
+<h3>.bfg--[B-]disabled</h3>
+<p><strong>[B-]</strong> (Breakpoint): <code>xl-</code>, <code>lg-</code>, <code>sm-</code>, <code>xs-</code> or none.</p>
 <p>To disable the grid system use <code>.bfg--disabled</code>.</p>
 <p>As the grid is responsive, you can disable the grid system at each breakpoint.</p>
 <p>(see below for more details about responsive grid).</p>
@@ -107,7 +113,9 @@
 &lt;div class=&quot;bfg bfg--xs-disabled&quot;&gt;...&lt;/div&gt;
 </code></pre>
 <h2>.bfg__box modifiers</h2>
-<h3>.bfg__box--[size]</h3>
+<h3>.bfg__box--[B-][S]</h3>
+<p><strong>[B-]</strong> (Breakpoint): <code>xl-</code>, <code>lg-</code>, <code>sm-</code>, <code>xs-</code> or none.</p>
+<p><strong>[S]</strong> (Size): <code>1</code>, <code>2</code>, ..., <code>11</code>, <code>12</code>.</p>
 <p>Define the <code>.bfg__box</code> size using <code>.bfg__box--1</code>,  <code>.bfg__box--2</code>, ...,  <code>.bfg__box--11</code>,  <code>.bfg__box--12</code>.</p>
 <pre><code class="language-html">...
   &lt;div class=&quot;bfg__box bfg__box--1&quot;&gt;&lt;/div&gt;
@@ -150,7 +158,8 @@
 <li>Add <code>.bfg__box--xs-12</code> to increase the size on <em>extra small screens</em> (until 576px).</li>
 </ul>
 <pre><code class="language-html">...
-  &lt;div class=&quot;bfg__box
+  &lt;div class=&quot;
+    bfg__box
     bfg__box--5
     bfg__box--xl-6
     bfg__box--lg-4
@@ -175,10 +184,10 @@
 <h2>Nested .bfg</h2>
 <p>To nest grids, use <code>.bfg</code> <em>block</em> on the <code>.bfg__box</code> <em>element</em>.</p>
 <p><strong>Example:</strong></p>
-<p>See below the <code>&lt;div&gt;</code> which have 2 behaviors:</p>
+<p>See below the <code>&lt;div&gt;</code> which have 2 roles:</p>
 <ul>
 <li><code>.bfg__box.bfg__box--6</code> as it is an <em>element</em> of the global <code>.bfg.bfg--col</code> <em>block</em>.</li>
-<li><code>.bfg.bfg--row</code> as it is a <em>block</em> of the nested <code>.bfg__box</code> <strong>elements</strong>.</li>
+<li><code>.bfg.bfg--row</code> as it is a <em>block</em> of the nested <code>.bfg__box</code> <em>elements</em>.</li>
 </ul>
 <pre><code class="language-html">&lt;div class=&quot;bfg bfg--col bfg--gap&quot;&gt;
   &lt;div class=&quot;bfg__box bfg__box--3&quot;&gt;&lt;/div&gt;
