--- a/src/introduction.html
+++ b/src/introduction.html
@@ -94,7 +94,7 @@
 </code></pre>
 <p>In the same way, use <code>.bfg__box--overflow</code> on the element to apply this behavior to a specific box.</p>
 <pre><code class="language-html">...
-  &lt;div class=&quot;bfg__box bfg_box--overflow&quot;&gt;...&lt;/div&gt;
+  &lt;div class=&quot;bfg__box bfg__box--overflow&quot;&gt;...&lt;/div&gt;
 ...
 </code></pre>
 <h3>.bfg--[B-]disabled</h3>
