--- a/src/demos/showcase/12.html
+++ b/src/demos/showcase/12.html
@@ -17,20 +17,13 @@
 <body>
   <div class="demo-source__description">
     To fix the height of a particular box in pixels, use <code>.bfg__box--fixed</code> and give the box the expected <code>height</code>.<br>
-    In this case, one of the other boxes should fill the remaining space by having <code>.bfg__box</code> without any size (like <code>.bfg__box--6</code>).<br>
     To see it in action, open on a separate tab and resize the window.
-
-    <span class="demo-source__warning">
-      <strong>Note for IE11:</strong><br>
-      The <code>.bfg__box--4</code> height is NOT accurate.
-      To support this browser, only use 2 boxes in this context: one <code>.bfg__box.bfg__box--fixed</code> and one <code>.bfg__box</code>.
-    </span>
   </div>
 
   <div class="bfg bfg--col">
     <div class="bfg__box bfg__box--fixed" style="height:150px"></div>
     <div class="bfg__box bfg__box--4"></div>
-    <div class="bfg__box"></div>
+    <div class="bfg__box bfg__box--8"></div>
   </div>
 
   <script>Demo.viewCode(); Demo.fillGrid(); Demo.pageHeight();</script>
