Add "bem-flex-grid.ie11.scss" for ie11 support

--- a/src/demos/showcase/15.html
+++ b/src/demos/showcase/15.html
@@ -10,7 +10,7 @@
 
   <link rel="shortcut icon" href="../../favicon.ico">
   <link rel="stylesheet" href="../demo.scss">
-  <link rel="stylesheet" href="../../bem-flex-grid.scss">
+  <link rel="stylesheet" href="../../bem-flex-grid.ie11.scss">
 
   <script src="../demo.ts"></script>
 
