--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="demos/demo.scss">
   <link rel="stylesheet" href="demos/index.scss">
 
-  <link rel="stylesheet" href="bem-flex-grid.scss">
+  <link rel="stylesheet" href="bem-flex-grid.ie11.scss">
 
   <script src="demos/demo.ts"></script>
 </head>
